--- a/css/lexbox.scss
+++ b/css/lexbox.scss
@@ -54,6 +54,12 @@ article.text {
     margin: 0 0 6px 0;
     line-height: 1.1em;
     font-size: 1.3em;
+
+    a {
+      color: black;
+      text-decoration: none;
+      :hover {text-decoration: underline;}
+    }
   }
 
   div.ctrls {
