--- a/public/css/lexbox.css
+++ b/public/css/lexbox.css
@@ -32,6 +32,11 @@ article.text {
     margin: 0 0 6px 0;
     line-height: 1.1em;
     font-size: 1.3em; }
+    article.text h3 a {
+      color: black;
+      text-decoration: none; }
+      article.text h3 a :hover {
+        text-decoration: underline; }
   article.text div.ctrls {
     position: absolute;
     bottom: 10px;
