--- a/views/partials/textbox.ejs
+++ b/views/partials/textbox.ejs
@@ -1,5 +1,5 @@
 <article class="text">
-  <h3><%= text.title %></h3>
+  <h3><a href="/<%= text.slug %>"><%= text.title %></a></h3>
   <p><%= text.summary %></p>
 
   <div class="ctrls">
