--- a/views/partials/textbox.ejs
+++ b/views/partials/textbox.ejs
@@ -5,6 +5,7 @@
   <div class="ctrls">
     <input type="checkbox" class="seltext" name="box[texts]" value="<%= text._id %>" />
     <a class="btn" href="/<%= text.slug %>">Edit</a>
+    <a class="btn btn-danger btn-mini" href="/<%= text.slug %>/remove" rel="nofollow">X</a>
   </div>
 
 </article>
