--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,68 +1,56 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Lexbox</title>
-    <link rel='stylesheet' href='/css/bootstrap.css' />
-    <link rel='stylesheet' href='/css/lexbox.css' />
-  </head>
-  <body>
-    <form method="post" action="/boxes/new">
-      <div class="container">
-        <div class="row">
+<% include header %>
 
-          <nav class="ctrls span3">
+<form method="post" action="/boxes/new">
+  <nav class="ctrls span3">
 
-            <h1>Lexbox</h1>
+    <h1>Lexbox</h1>
 
-            <section id="boxctrls">
-              <p>
-                Add selected to box named:<br />
-                <input type="text" name="name" id="boxname" /><br />
-                <input type="checkbox" name="tag" id="tagthese" checked="checked" />
-                <label for="tagthese">Tag with box name</label><br />
-                <input type="submit" name="dobox" id="dobox" value="Do it" />
-              </p>
+    <section id="boxctrls">
+      <p>
+        Add selected to box named:<br />
+        <input type="text" name="name" id="boxname" /><br />
+        <input type="checkbox" name="tag" id="tagthese" checked="checked" />
+        <label for="tagthese">Tag with box name</label><br />
+        <input type="submit" name="dobox" id="dobox" value="Do it" />
+      </p>
 
-              <p>
-                <input type="submit" name="unbox" id="unbox" value="Unbox selected" />
-              <p>
-              
-              <p>
-                <label for="boxcolor">Color selected box:</label>
-                <input type="text" name="boxcolor" id="boxcolor" value="" placeholder="hex or English" /><br />
-                <input type="submit" name="colorbox" id="colorbox" value="Paint" />
-              </p>
-            </section>
-            
-            
-          </nav>
+      <p>
+        <input type="submit" name="unbox" id="unbox" value="Unbox selected" />
+      <p>
+      
+      <p>
+        <label for="boxcolor">Color selected box:</label>
+        <input type="text" name="boxcolor" id="boxcolor" value="" placeholder="hex or English" /><br />
+        <input type="submit" name="colorbox" id="colorbox" value="Paint" />
+      </p>
+    </section>
+    
+    
+  </nav>
 
-          <div class="content span9">
-            
-            <% boxes.forEach(function(box) { %>
-              <section class="box">
-                <h2><%= box[0].box.name %></h2>
-                <% box.forEach(function(text) { %>
-                  <% include partials/textbox %>
-                <% }) %>
-              </section>
-            <% }) %>
+  <div class="content span9">
+    <a class="btn btn-info" href="/texts/new">New text</a>
+    
+    <% boxes.forEach(function(box) { %>
+      <section class="box">
+        <h2><%= box[0].box.name %></h2>
+        <% box.forEach(function(text) { %>
+          <% include partials/textbox %>
+        <% }) %>
+      </section>
+    <% }) %>
 
-            <!-- ensure boxless texts go at the bottom -->
-            <% if (unboxed.length) { %>
-              <section class="nobox">
-                <% unboxed.forEach(function(text) { %>
-                  <% include partials/textbox %>
-                <% }) %>
-              </section>
-            <% } %>
+    <!-- ensure boxless texts go at the bottom -->
+    <% if (unboxed.length) { %>
+      <section class="nobox">
+        <% unboxed.forEach(function(text) { %>
+          <% include partials/textbox %>
+        <% }) %>
+      </section>
+    <% } %>
 
-            <a class="btn btn-info" href="/texts/new">New text</a>
-          </div>
+    <a class="btn btn-info" href="/texts/new">New text</a>
+  </div>
+</form>
 
-        </div>
-      </div>
-
-    </form>
-  </body>
-</html>
+<% include footer %>
