--- a/public/css/lexbox.css
+++ b/public/css/lexbox.css
@@ -5,6 +5,9 @@ nav.ctrls label {
 nav.ctrls #dobox {
   margin-top: 6px; }
 
+.content {
+  margin: 12px 0px; }
+
 section.box, section.nobox {
   overflow: hidden;
   padding: 10px;
