--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include header %>
 
-<form method="post" action="/boxes/new">
+<form method="post" action="/boxes">
   <nav class="ctrls span3">
 
     <h1>Lexbox</h1>
