link the top to the title, because that's what you do

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <form method="post" action="/boxes">
   <nav class="ctrls span3">
 
-    <h1>Lexbox</h1>
+    <h1><a href="/">Lexbox</a></h1>
 
     <section id="boxctrls">
       <p>
