show empty string when summary not present

--- a/views/text.ejs
+++ b/views/text.ejs
@@ -30,7 +30,7 @@
 
     <section id="essences">
       Summary:
-      <textarea id="summary" name="summary"><%= text.summary %></textarea>
+      <textarea id="summary" name="summary"><%= text.summary || '' %></textarea>
     </section>
 
 
