--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,14 @@
 doctype 5
 html(lang="en")
   head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+
     title Lexbox
+    
     link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/bootstrap-responsive.css')
     link(rel='stylesheet', href='/css/lexbox.css')
     
     block head
@@ -10,3 +16,8 @@ html(lang="en")
   body
 
     block body
+    
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js')
+    script
+      window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\\/script>')
+    block js
