--- a/css/lexbox.scss
+++ b/css/lexbox.scss
@@ -15,7 +15,7 @@
 }
 
 nav.ctrls {
-  form {
+  p, section {
     margin: 32px 0px;
   }
 
@@ -32,6 +32,15 @@ nav.ctrls {
 
 section.boxes {
   @include clearme;
+}
+
+section.tags {
+  .btn {
+    margin-left: 7px;
+  }
+  input {
+    display: block;
+  }
 }
 
 article.text {
