--- a/views/text.jade
+++ b/views/text.jade
@@ -17,13 +17,14 @@ block body
               - each tag, tagindex in text.tags
                 input(type='hidden', name='tags[]', value=tag.name)
 
-                li= tag.name
+                li= tag.name + '&nbsp;'
                   a.btn.btn-mini.btn-danger(href=text.slug+'/tags/'+tagindex+'/remove', rel='nofollow') x
           else
             ul
               li: em None yet
 
           | Add:
+          br
           input#newtag(type='text', name='newtag', value='', placeholder='new tag')
           input#dotag(type='submit', name='dotag', value='Add')
 
